Fix octree expand bug and add bug
Expanding went wrong in some directions.
Some blocks were partially outside the root octree node when adding.